--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,19 @@
 {
-	"name": "mrclay/minify",
+	"name": "vcomedia/php-common",
 	"type": "library",
-	"description": "Minify is a PHP5 app that helps you follow several rules for client-side performance. It combines multiple CSS or Javascript files, removes unnecessary whitespace and comments, and serves them with gzip encoding and optimal client-side cache headers",
-	"homepage": "http://code.google.com/p/minify/",
-	"license": "BSD-3-Clause",
+	"description": "VCOMedia PHP Common Library",
+	"homepage": "https://github.com/vcomedia/php-common",
+	"license": "MIT",
 	"authors": [
 		{
-			"name": "Stephen Clay",
-			"email": "steve@mrclay.org",
-			"role": "Developer"
+			"name": "Vahag Dudukgian",
+			"email": "vahag@vcomedia.com"
 		}
 	],
-	"support": {
-		"email": "minify@googlegroups.com",
-		"issues": "http://code.google.com/p/minify/issues/list",
-		"wiki": "http://code.google.com/p/minify/w/list"
-	},
 	"autoload": {
-		"classmap": ["min/lib/"]
+		"classmap": ["src/"]
 	},
 	"require": {
-		"php": ">=5.2.1",
-		"ext-pcre": "*"
-	},
-	"require-dev": {
-		"tubalmartin/cssmin": "~2.4.8"
-	},
-	"suggest": {
-		"tubalmartin/cssmin": "Support minify with CSSMin (YUI PHP port)"
+		"php": ">=5.2.1"
 	}
 }
